Remove ID's from endpoints
