# DotNet/MSOutlook/Contracts/EmailForwardRequest.cs
@@ -7,9 +7,21 @@ namespace MSOutlook.Contracts
 {
     public class EmailForwardRequest
     {
-        [JsonPropertyName("id")]
-        [JsonProperty("id")]
-        public string Id { get; set; }
+        [JsonProperty("from")]
+        [JsonPropertyName("from")]
+        public string From { get; set; }
+
+        [JsonProperty("to")]
+        [JsonPropertyName("to")]
+        public string To { get; set; }
+
+        [JsonProperty("subject")]
+        [JsonPropertyName("subject")]
+        public string Subject { get; set; }
+
+        [JsonProperty("body")]
+        [JsonPropertyName("body")]
+        public string Body { get; set; }
 
         [JsonPropertyName("toRecipients")]
         [JsonProperty("toRecipients")]
