# DotNet/MSOutlook/Contracts/EmailReplyRequest.cs
@@ -6,9 +6,21 @@ namespace MSOutlook.Contracts
 {
     public class EmailReplyRequest
     {
-        [JsonPropertyName("id")]
-        [JsonProperty("id")]
-        public string Id { get; set; }
+        [JsonProperty("from")]
+        [JsonPropertyName("from")]
+        public string From { get; set; }
+
+        [JsonProperty("to")]
+        [JsonPropertyName("to")]
+        public string To { get; set; }
+
+        [JsonProperty("subject")]
+        [JsonPropertyName("subject")]
+        public string Subject { get; set; }
+
+        [JsonProperty("body")]
+        [JsonPropertyName("body")]
+        public string Body { get; set; }
 
         [JsonPropertyName("comment")]
         [JsonProperty("comment")]
