# DotNet/MSOutlook/Controllers/MessagesController.cs
@@ -3,6 +3,7 @@ using MSOutlook.Contracts;
 using MSOutlook.Helpers;
 using MSOutlook.Interfaces;
 using MSOutlook.Services;
+using Newtonsoft.Json;
 using System.Linq;
 using System.Threading.Tasks;
 
@@ -22,6 +23,7 @@ namespace MSOutlook.Controllers
         [HttpPost("query")]
         public async Task<QueryEmailsResponse> ListMessages(QueryEmailsRequest request)
         {
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][ListMessages]");
             QueryEmailsResponse resp = new QueryEmailsResponse
             {
                 EmailMessages = null
@@ -36,12 +38,14 @@ namespace MSOutlook.Controllers
             }
 
             resp.EmailMessages = await _mailService.ListMessage(request, token);
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][ListMessages] Response:" + JsonConvert.SerializeObject(resp));
             return resp;
         }
 
         [HttpPost("get")]
         public async Task<EmailResponse> GetMessage(EmailIdRequest request)
         {
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][GetMessage]");
             string authorizationHeader = Request.Headers["Authorization"].FirstOrDefault();
             string token = TokenHelper.GetSessionToken(authorizationHeader);
             if (string.IsNullOrEmpty(token))
@@ -56,6 +60,7 @@ namespace MSOutlook.Controllers
         [HttpPost("delete")]
         public async Task<IActionResult> DeleteMessage(EmailIdRequest request)
         {
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][DeleteMessage]");
             string authorizationHeader = Request.Headers["Authorization"].FirstOrDefault();
             string token = TokenHelper.GetSessionToken(authorizationHeader);
             if (string.IsNullOrEmpty(token))
@@ -65,6 +70,9 @@ namespace MSOutlook.Controllers
             }
 
             bool isDeleted = await _mailService.DeleteMessage(request, token);
+
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][DeleteMessage] Response:" + isDeleted);
+
             if (isDeleted)
             {
                 return Ok("Message deleted successfully.");
@@ -78,6 +86,7 @@ namespace MSOutlook.Controllers
         [HttpPost("sendDraft")]
         public async Task<IActionResult> SendDraftMessage(EmailIdRequest request)
         {
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][SendDraftMessage]");
             string authorizationHeader = Request.Headers["Authorization"].FirstOrDefault();
             string token = TokenHelper.GetSessionToken(authorizationHeader);
             if (string.IsNullOrEmpty(token))
@@ -87,6 +96,7 @@ namespace MSOutlook.Controllers
             }
 
             bool isSent = await _mailService.SendDraftMessage(request, token);
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][SendDraftMessage] Response:" + isSent);
             if (isSent)
             {
                 return Ok("Message sent successfully.");
@@ -100,6 +110,7 @@ namespace MSOutlook.Controllers
         [HttpPost("reply")]
         public async Task<IActionResult> ReplyMessage(EmailReplyRequest request)
         {
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][ReplyMessage]");
             string authorizationHeader = Request.Headers["Authorization"].FirstOrDefault();
             string token = TokenHelper.GetSessionToken(authorizationHeader);
             if (string.IsNullOrEmpty(token))
@@ -110,13 +121,32 @@ namespace MSOutlook.Controllers
 
             bool isSent;
 
-            if (JsonHelper.IsJsonObject(request.Id))
+            var findEmailRequest = new QueryEmailsRequest
             {
-                isSent = await _mailService.ReplyMultipleMessages(request, token);
+                From = request.From,
+                To = request.To,
+                Subject = request.Subject,
+                Body = request.Body
+            };
+
+            var emailList = await _mailService.ListMessage(findEmailRequest, token);
+
+            if (emailList.Count == 0 || emailList.Count > 1)
+            {
+                return StatusCode(500, "Email not found, give more specific information");
+            }
+
+            var id = emailList[0].Id;
+
+            if (JsonHelper.IsJsonObject(id))
+            {
+                isSent = await _mailService.ReplyMultipleMessages(request, id, token);
             } else
             {
-                isSent = await _mailService.ReplyMessage(request.Id, request.ToRecipients, request.Comment, token);
+                isSent = await _mailService.ReplyMessage(id, request.ToRecipients, request.Comment, token);
             }
+
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][ReplyMessage] Response:" + isSent);
 
             if (isSent)
             {
@@ -131,6 +161,7 @@ namespace MSOutlook.Controllers
         [HttpPost("replyAll")]
         public async Task<IActionResult> ReplyAllMessage(EmailReplyAllRequest request)
         {
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][ReplyAllMessage]");
             string authorizationHeader = Request.Headers["Authorization"].FirstOrDefault();
             string token = TokenHelper.GetSessionToken(authorizationHeader);
             if (string.IsNullOrEmpty(token))
@@ -141,14 +172,33 @@ namespace MSOutlook.Controllers
 
             bool isSent;
 
-            if (JsonHelper.IsJsonObject(request.Id))
+            var findEmailRequest = new QueryEmailsRequest
             {
-                isSent = await _mailService.ReplyAllMultipleMessages(request, token);
+                From = request.From,
+                To = request.To,
+                Subject = request.Subject,
+                Body = request.Body
+            };
+
+            var emailList = await _mailService.ListMessage(findEmailRequest, token);
+
+            if (emailList.Count == 0 || emailList.Count > 1)
+            {
+                return StatusCode(500, "Email not found, give more specific information");
+            }
+
+            var id = emailList[0].Id;
+
+            if (JsonHelper.IsJsonObject(id))
+            {
+                isSent = await _mailService.ReplyAllMultipleMessages(request, id, token);
             }
             else
             {
-                isSent = await _mailService.ReplyAllMessage(request.Id, request.Comment, token);
+                isSent = await _mailService.ReplyAllMessage(id, request.Comment, token);
             }
+
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][ReplyAllMessage] Response:" + isSent);
 
             if (isSent)
             {
@@ -163,6 +213,7 @@ namespace MSOutlook.Controllers
         [HttpPost("forward")]
         public async Task<IActionResult> ForwardMessage(EmailForwardRequest request)
         {
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][ForwardMessage]");
             string authorizationHeader = Request.Headers["Authorization"].FirstOrDefault();
             string token = TokenHelper.GetSessionToken(authorizationHeader);
             if (string.IsNullOrEmpty(token))
@@ -173,14 +224,33 @@ namespace MSOutlook.Controllers
 
             bool isSent;
 
-            if (JsonHelper.IsJsonObject(request.Id))
+            var findEmailRequest = new QueryEmailsRequest
             {
-                isSent = await _mailService.ForwardMultipleMessages(request, token);
+                From = request.From,
+                To = request.To,
+                Subject = request.Subject,
+                Body = request.Body
+            };
+
+            var emailList = await _mailService.ListMessage(findEmailRequest, token);
+
+            if (emailList.Count == 0 || emailList.Count > 1)
+            {
+                return StatusCode(500, "Email not found, give more specific information");
+            }
+
+            var id = emailList[0].Id;
+
+            if (JsonHelper.IsJsonObject(id))
+            {
+                isSent = await _mailService.ForwardMultipleMessages(request, id, token);
             }
             else
             {
-                isSent = await _mailService.ForwardMessage(request.Id, request.ToRecipients, request.Comment, token);
+                isSent = await _mailService.ForwardMessage(id, request.ToRecipients, request.Comment, token);
             }
+
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][ForwardMessage] Response:" + isSent);
 
             if (isSent)
             {
@@ -195,6 +265,7 @@ namespace MSOutlook.Controllers
         [HttpPost("sendMail")]
         public async Task<IActionResult> SendMail(EmailRequest request)
         {
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][SendMail]");
             string authorizationHeader = Request.Headers["Authorization"].FirstOrDefault();
             string token = TokenHelper.GetSessionToken(authorizationHeader);
             if (string.IsNullOrEmpty(token))
@@ -204,6 +275,9 @@ namespace MSOutlook.Controllers
             }
 
             bool isSent = await _mailService.SendMail(request, token);
+
+            System.Diagnostics.Debug.WriteLine("[vertex][Messages][SendMail] Response:" + isSent);
+
             if (isSent)
             {
                 return Ok("Message sent successfully.");
